# mandelbrot-explorer

./: .gitignore  1.workers.js  README.md  TileCreator.js  asset-manifest.json  config-overrides.js  index.html  mandelbrot.d.ts  mandelbrot.js  mandelbrot_bg.d.ts  mandelbrot_bg.wasm  package-lock.json  package.json  precache-manifest.2eb9ce30cbe54d5d60a1febe911fa13f.js  precache-manifest.71b52e6210e49a4a7c183f4e296f2ee7.js  precache-manifest.8fd22518e8b238265a509af30ea512fd.js  precache-manifest.95fadf83e9d453810148d330944c310a.js  precache-manifest.9def093eeeb438e6205efbd18932b8c8.js  precache-manifest.b27041926d4f01395b8284041915b00c.js  precache-manifest.c5e51a6f40b70be9472d582c0934c5c9.js  precache-manifest.c7dabb826679dbe20aaad92ae4f8a451.js  service-worker.js  workerpack.config.js  workers.js
public/: index.html
src/: App.js  Benchmark.js  Donate.js  Info.js  Information.js  InformationBox.js  MandelLayer.js  Mandelbrot.js  Settings.js  Share.js  TheMap.js  TileCreator.js  TileCreator.worker.js  TileManager.js  WorkerManager.js  constants.js  context.js  createColourScale.js  createMandelbrotImage.js  index.css
src/components/: Donate.js  Info.js  Information.js  InformationBox.js  Share.js
src/rust/: Cargo.toml
src/wasmworkers/: mandelbrotreference.js  workers.js
src/wasmworkers/rust/: Cargo.toml
src/wasmworkers/rust/src/: lib.rs
static/css/: main.168d03ab.chunk.css  main.168d03ab.chunk.css.map  main.89732ca1.css  main.89732ca1.css.map  main.fab608e0.css  main.fab608e0.css.map
static/js/: 2.82b3c551.chunk.js  2.82b3c551.chunk.js.map  (+31 more)
(+1 files in other folders)
