[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/ascendzor/rust-wasm-mandelbrot"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"
features = [
    'ImageData',
    'CanvasRenderingContext2d',
    'console'
]

[dependencies]
wasm-bindgen = "=0.2.51"